Fix large screen positioning of expand-collapse tags button.

--- a/public/css/feature.css
+++ b/public/css/feature.css
@@ -4,11 +4,11 @@
 
 .content-controls {
   text-align: left;
+  margin-bottom: 0;
 }
 
 .title {
   color: darkblue;
-  margin-bottom: 1.2em;
 }
 
 .tags {
